@@ -112,12 +112,15 @@ typedef struct stMap
  bool firsttime;  // used when generating multiplayer positions on world map
 } stMap;
 
-struct stBitmap
+class CBitmap
 {
+public:
  int xsize;
  int ysize;
  unsigned char *bmptr;
  char name[9];
+
+ CBitmap(){ bmptr=NULL; }
 };
 
 struct stSprite
